update portfolio added pics fixed spacing on form

--- a/starter-code/public/assets/css/modules.css
+++ b/starter-code/public/assets/css/modules.css
@@ -65,7 +65,7 @@ header.major {
 /* Form */
 
 form {
-  margin: 0 0 2em 0;
+  margin: 1em 4em 2em;
 }
 
 label {
